--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
     {{>header}}
+    <p>This site was created by Fede Franzo. It uses data from APIs</p>
     <img class="portrait" src="/img/robot.png" alt="">
     </div>
 
